# dnssec-keytools-legacy

./: ChangeLog  Doxyfile.in  Makefile.am  README.md  autogen.sh  configure.ac  doxygen.am  version.m4
changepin/: Makefile.am  changepin.c
checks/: Makefile.am  README.txt  pkcs11spy.hsmconfig.in  regress-kskgen.sh  regress-ksrsigner.sh  rsa2048-1.key  rsa2048-2.key  softhsm-dual.conf  softhsm-single.conf  softhsm.hsmconfig.in
checks/baseline/: KSK1.csr  KSK2.csr  ksr-root-2009-q4-2.xml  ksr-root-2010-q1-0.xml  ksr-root-2010-q2-0.xml  skr-root-2009-q4-2.xml  skr-root-2010-q1-0.xml  skr-root-2010-q2-0-revoke.xml  skr-root-2010-q2-0.xml
common/: base32.c  base32.h  base64.c  base64.h  dnssec.c  dnssec.h  logger.c  logger.h  mbuf.c  mbuf.h  pkcs11_dnssec.c  pkcs11_dnssec.h  rlder.c  rlder.h  sha1.c  sha1.h  sha2.c  sha2.h  sha2wordlist.h  util.c  util.h
compat/: compat.h
extras/: svnignore.sh
keybackup/: Makefile.am  keybackup.c
kskgen/: Makefile.am  Makefile.pre  kskgen.c  kskgen.h  kskparams.h
ksrsigner/: Makefile.am  Makefile.pre  ksrcommon.c  ksrcommon.h  ksrpolicy.h  ksrsigner.c  ksrsigner.h  wksr.c
m4/: acx_32bit.m4  acx_analyze.m4  acx_pedantic.m4  acx_strict.m4  ax_check_opensc.m4  ax_check_openssl.m4  ax_check_softhsm.m4
utils/: Makefile.am  digest  displaycsr  hsmfd-hash  printlog  ttyaudit
