# $Id: Makefile.am 476 2010-06-11 23:09:11Z jakob $

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

EXTRA_DIST = \
	$(srcdir)/printlog \
	$(srcdir)/digest \
	$(srcdir)/displaycsr \
	$(srcdir)/ttyaudit

bin_SCRIPTS = \
	$(srcdir)/printlog \
	$(srcdir)/digest \
	$(srcdir)/displaycsr \
	$(srcdir)/ttyaudit
